# Backend

./: .gitignore  Cargo.toml  dev.sh
src/: main.rs
src/routes/: account.rs  guilds.rs  invites.rs  mod.rs  structs.rs  users.rs
src/utils/: account.rs  database.rs  mod.rs  permissions.rs  sse.rs  structs.rs
